siguiendo con la i18n parte2

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,3 +32,12 @@ en:
   prices: "prices"
   value_rate: "value rate"
   package_rate: "package rate"
+  packages: "packages"
+  english: "english"
+  spanish: "spanish"
+  new_package: "new package"
+  #package: "package"
+  profile: "profile"
+  logout: "logout"
+  login: "login"
+  sign_up: "sign up"
