--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -32,3 +32,12 @@ es:
   prices: "precios"
   value_rate: "tasa del valor"
   package_rate: "tasa del paquete"
+  packages: "paquetes"
+  english: "inglés"
+  spanish: "español"
+  new_package: "nuevo paquete"
+  #package: "package"
+  profile: "perfil"
+  logout: "salir"
+  login: "entrar"
+  sign_up: "registro"
