traducciones casi listas

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,3 +41,26 @@ en:
   logout: "logout"
   login: "login"
   sign_up: "sign up"
+  email: "email"
+  enter: "enter"
+  username: "username"
+  password: "password"
+  enter_email: "enter email"
+  enter_username: "enter username"
+  reception_center: "reception center"
+  characters: "characters"
+  minimum: "minimum"
+  select_a_location: "select a location"
+  forgot: "forgot"
+  your: "your"
+  ref_number: "Ref. Number"
+  description: "description"
+  role: "role"
+  status: "status"
+  details: "details"
+  view: "view"
+  search: "search"
+  by: "by"
+  packages_found: "packages found"
+
+
