--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -41,3 +41,23 @@ es:
   logout: "salir"
   login: "entrar"
   sign_up: "registro"
+  email: "correo electrónico"
+  enter: "ingrese"
+  username: "nombre de usuario"
+  password: "contraseña"
+  enter_username: "ingrese nombre de usuario"
+  reception_center: "centro de recepción"
+  characters: "caracteres"
+  minimum: "mínimo"
+  select_a_location: "seleccione una dirección"
+  forgot: "olvidó"
+  your: "su"
+  ref_number: "Num. de Referencia"
+  description: "descripción"
+  role: "rol"
+  status: "estado"
+  details: "detalles"
+  view: "ver"
+  search: "buscar"
+  by: "por"
+  packages_found: "paquetes encontrados"
